# OOP

./: CMakeLists.txt  README.md  diagramm.puml
code/: CMakeLists.txt  Player.cpp  PlayerController.cpp  damage_scheme.h  enemy.h  fieldRenderer.cpp  game_level.cpp  level_generator.cpp  main.cpp  move_event.cpp  negative_event.cpp  player.cpp  playerController.cpp  positive_event.cpp  push_scheme.h  random_scheme.h  seek_scheme.h  tail.cpp  tailmap.cpp
code/controller/: CMakeLists.txt  playerController.cpp  playerController.h
code/events/: CMakeLists.txt  game_event.h  move_event.cpp  move_event.h  negative_event.cpp  negative_event.h  positive_event.cpp  positive_event.h
code/game/: CMakeLists.txt  game.cpp  game.h  game_observer.cpp  game_observer.h  observer.h  tracker.cpp  tracker.h  types.h
code/logger/: CMakeLists.txt  base_mesg.h  enable_key_log.cpp  enable_key_log.h  file_out.cpp  file_out.h  logger.cpp  logger.h  lose_log.cpp  lose_log.h  new_game_log.cpp  new_game_log.h  not_enable_key_log.cpp  not_enable_key_log.h  output.h  terminal_out.cpp  terminal_out.h  win_log.cpp  win_log.h
code/map/: CMakeLists.txt  console_render.cpp  console_render.h  fieldRenderer.cpp  fieldRenderer.h  game_level.cpp  game_level.h  game_render.h  level_generator.cpp  level_generator.h  tail.cpp  tail.h  tailmap.cpp  tailmap.h
code/player/: CMakeLists.txt  player.cpp  player.h
code/reader/: CMakeLists.txt  command_mapper.h  input.h  input_reader.cpp  input_reader.h  inputhandler.cpp  inputhandler.h
head/: Directions.h  Player.h  PlayerController.h  directions.h  fieldRenderer.h  game_event.h  game_level.h  level_generator.h  move_event.h  negative_event.h  player.h  playerController.h  positive_event.h  tail.h  tailmap.h  tailtype.h
tests/: task1  task1.cpp  task2.cpp  task5.cpp
